--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -50,7 +50,6 @@ nav:
                          - Kafka Open Metadata Topic Connector: connectors/resource/kafka-open-metadata-topic-connector.md
                          - In Memory Open Metadata Topic Connector: connectors/resource/in-mem-open-metadata-topic-connector.md
                   - JDBC Connector: connectors/resource/jdbc-resource-connector.md
-                  - Avro File Connector: connectors/resource/avro-file-resource-connector.md
                   - Basic File Connector: connectors/resource/basic-file-resource-connector.md
                   - CSV File Connector: connectors/resource/csv-file-resource-connector.md
                   - Data Folder Connector: connectors/resource/data-folder-resource-connector.md
@@ -390,6 +389,7 @@ nav:
               - Events and Logs: types/2/0223-Events-and-Logs.md
               - Databases: types/2/0224-Databases.md
               - Metadata Repositories: types/2/0225-Metadata-Repositories.md
+              - Archive Files: types/2/0226-Archive-Files.md
               - Keystores: types/2/0227-Keystores.md
               - Code Tables: types/2/0230-Code-Tables.md
               - Information View: types/2/0235-Information-View.md
@@ -598,6 +598,7 @@ nav:
           - Open Integration (OIF): frameworks/oif/overview.md
           - Open Discovery (ODF): frameworks/odf/overview.md
           - Governance Actions (GAF): frameworks/gaf/overview.md
+          - Event Actions (EAF): frameworks/eaf/overview.md
       - Conformance Test Suite:
           - CTS Overview: guides/cts/overview.md
           - Platform Profiles:
@@ -657,6 +658,7 @@ nav:
   - Concepts:
       - Egeria Glossary: concepts/index.md
       - Basic Concepts: concepts/basic-concepts.md
+      - Action: concepts/action.md
       - Action Target: concepts/action-target.md
       - Anchor: concepts/anchor.md
       - Asset: concepts/asset.md
@@ -682,6 +684,7 @@ nav:
       - Connector Provider: concepts/connector-provider.md
       - Connector Type: concepts/connector-type.md
       - Contact Method: concepts/contact-method.md
+      - Context Event: concepts/context-event.md
       - Data Class: concepts/data-class.md
       - Data Domain: concepts/subject-area.md
       - Data Engine Proxy: concepts/data-engine-proxy.md
@@ -690,6 +693,8 @@ nav:
       - Endpoint: concepts/endpoint.md
       - Engine Action: concepts/engine-action.md
       - Engine Host: concepts/engine-host.md
+      - Event Action Engine: concepts/event-action-engine.md
+      - Event Action Service: concepts/event-action-service.md
       - Event Bus: concepts/event-bus.md
       - Event Mapper Connector: concepts/event-mapper-connector.md
       - External Reference: concepts/external-reference.md
