--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -687,6 +687,7 @@ nav:
       - Data Class: concepts/data-class.md
       - Data Domain: concepts/subject-area.md
       - Data Engine Proxy: concepts/data-engine-proxy.md
+      - Deployed Implementation Type: concepts/deployed-implementation-type.md
       - Digital Resource Connector: concepts/digital-resource-connector.md
       - Discovery Analysis Report: concepts/discovery-analysis-report.md
       - Endpoint: concepts/endpoint.md
@@ -699,6 +700,7 @@ nav:
       - External Reference: concepts/external-reference.md
       - Favorite Collections: concepts/favorite-things-collection.md
       - Feedback: concepts/feedback.md
+      - File Type: concepts/deployed-implementation-type.md
       - Glossary Term: practices/common-data-definitions/anatomy-of-a-glossary.md
       - GUID: concepts/guid.md
       - Governance Action Engine: concepts/governance-action-engine.md
