--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -700,7 +700,7 @@ nav:
       - External Reference: concepts/external-reference.md
       - Favorite Collections: concepts/favorite-things-collection.md
       - Feedback: concepts/feedback.md
-      - File Type: concepts/deployed-implementation-type.md
+      - File Type: concepts/file-type.md
       - Glossary Term: practices/common-data-definitions/anatomy-of-a-glossary.md
       - GUID: concepts/guid.md
       - Governance Action Engine: concepts/governance-action-engine.md
@@ -747,6 +747,7 @@ nav:
       - Note Log: concepts/note-log.md
       - OMAG Server: concepts/omag-server.md
       - OMAG Server Platform: concepts/omag-server-platform.md
+      - OMAG Server Runtime: concepts/omag-server-runtime.md
       - OMAG Subsystem: concepts/omag-subsystem.md
       - Open Discovery Engine: concepts/open-discovery-engine.md
       - Open Discovery Service: concepts/open-discovery-service.md
