Add platform.default.config.document property and governance action types
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -786,6 +786,7 @@ nav:
       - Repository Proxy: concepts/repository-proxy.md
       - Repository Validator: concepts/repository-validator.md
       - Resource: concepts/resource.md
+      - Resource Use: concepts/resource-use.md
       - REST client connector: concepts/rest-client-connector.md
       - Review: concepts/review.md
       - Schema: concepts/schema.md
