--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -709,10 +709,12 @@ nav:
       - File Type: concepts/file-type.md
       - Glossary Term: practices/common-data-definitions/anatomy-of-a-glossary.md
       - GUID: concepts/guid.md
+      - Governance Action: concepts/governance-action.md
       - Governance Action Engine: concepts/governance-action-engine.md
       - Governance Action Process: concepts/governance-action-process.md
       - Governance Action Process Step: concepts/governance-action-process-step.md
       - Governance Action Service: concepts/governance-action-service.md
+      - Governance Action Type: concepts/governance-action-type.md
       - Governance Domain: concepts/governance-domain.md
       - Governance Engine: concepts/governance-engine.md
       - Governance Engine Definition: concepts/governance-engine-definition.md
