--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -70,7 +70,7 @@ nav:
               - Apache Atlas Server:
                     - Call API: connectors/apache-atlas/apache-atlas-rest-connector.md
                     - Survey: connectors/apache-atlas/apache-atlas-survey-action-service.md
-                    - Catalog: connectors/integration/apache-atlas-catalog-integration-connector.md
+                    - Catalog: connectors/apache-atlas/apache-atlas-catalog-integration-connector.md
               - Governance Actions:
                     - Generic Element Watchdog: connectors/governance-action/generic-element-watchdog-governance-action-service.md
                     - Origin Seeker: connectors/governance-action/origin-seeker-remediation-governance-action-service.md
@@ -170,7 +170,7 @@ nav:
           - Migration: guides/migration/migrating-configuration-documents.md
       - Operations:
           - Operate OMAG Server Platform: guides/operations/overview.md
-          - Operate OMAG Server Starter: guides/operations/operate-omag-server-starter.md
+          - Operate OMAG Server Runtime: guides/operations/operate-omag-server-starter.md
           - Egeria in Kubernetes:
               - Egeria in Kubernetes: guides/operations/kubernetes/index.md
               - Introduction to Kubernetes: guides/operations/kubernetes/k8s.md
@@ -183,7 +183,7 @@ nav:
                   - Coco Pharmaceuticals Lab: guides/operations/kubernetes/charts/lab.md
                   - CTS Chart: guides/operations/kubernetes/charts/cts.md
                   - PTS Chart: guides/operations/kubernetes/charts/pts.md
-                  - Server Starter Chart: guides/operations/kubernetes/charts/server.md
+                  - OMAG Server Runtime Chart: guides/operations/kubernetes/charts/server.md
               - Container Images: guides/operations/kubernetes/container-images.md
               - Custom Deployment: guides/operations/kubernetes/custom-deployment.md
               - Egeria Operator: guides/operations/kubernetes/operator.md
@@ -281,7 +281,7 @@ nav:
                               - Overview: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
                               - Prerequisites: getting-started/dojo/egeria-dojo-day-1-3-1-1-platform-set-up-prerequisites.md
                               - Configuring the Platform: getting-started/dojo/egeria-dojo-day-1-3-1-2-configuring-the-platform.md
-                              - Confiiguring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
+                              - Configuring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
                         - Running Metadata Access Servers:
                               - Overview: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
                               - Starting Server: getting-started/dojo/egeria-dojo-day-1-3-2-1-starting-the-server.md
@@ -814,6 +814,7 @@ nav:
       - Repository Helper: concepts/repository-helper.md
       - Repository Proxy: concepts/repository-proxy.md
       - Repository Validator: concepts/repository-validator.md
+      - Request For Action: concepts/request-for-action.md
       - Resource: concepts/resource.md
       - Resource Use: concepts/resource-use.md
       - REST client connector: concepts/rest-client-connector.md
