--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -246,65 +246,13 @@ nav:
                 - Using IntelliJ: education/tutorials/intellij-tutorial/overview.md
                 - Using Postman: education/tutorials/postman-tutorial/overview.md
                 - Using Kafka: education/tutorials/kafka-tutorial/overview.md
+      - Informal Guide to Getting Started: https://getting-started-with-egeria.pdr-associates.com/introduction.html
       - Webinars: education/webinar-program/overview.md
       - Comparisons:
             - Apache Atlas: education/comparisons/apache-atlas.md
       - Scenarios:
             - Data Manager Integration: scenarios/data-manager-integration/overview.md
             - File Lineage: scenarios/file-lineage/overview.md
-      - Dojos:
-          - Dojo Overview: education/egeria-dojo/index.md
-          - Running Egeria Day :
-              - Introduction to 'Running Egeria' day: education/egeria-dojo/running-egeria/running-egeria-intro.md
-              - Egeria introduction : education/egeria-dojo/running-egeria/egeria-introduction.md
-              - Setup of the environment: education/egeria-dojo/running-egeria/setup-environment.md
-              - Simple Install of Egeria: education/egeria-dojo/running-egeria/simple-install.md
-              - User Interfaces:
-                  - Introduction to the Egeria UIs: education/egeria-dojo/running-egeria/user-interfaces/ui-introduction.md
-                  - Ecosystem UI:
-                      - Using the Egeria Ecosystem UI: education/egeria-dojo/running-egeria/user-interfaces/ecosystem-ui/ecosystem-ui-start.md
-              - Configuring and Operating a Server: education/egeria-dojo/running-egeria/configuring-and-operating-a-server.md
-              - Coco Pharmaceuticals Lab: education/egeria-dojo/running-egeria/coco-labs-environment.md
-              - Summary of 'Running Egeria' day : education/egeria-dojo/running-egeria/running-egeria-summary.md
-          - Developer Day : education/egeria-dojo/developer/overview.md
-          - Metadata Governance Day : education/egeria-dojo/metadata-governance/overview.md
-          - Egeria Contributor Day : education/egeria-dojo/egeria-contributor.md
-          - Egeria in Production Day : education/egeria-dojo/egeria-in-production.md
-      - Old Dojo (deprecated):
-            - Dojo Introduction: getting-started/dojo/index.md
-            - Day 1:
-                  - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-introduction.md
-                  - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-introduction.md
-                  - Running Egeria:
-                        - Overview: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
-                        - Platform Setup and Configuration:
-                              - Overview: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
-                              - Prerequisites: getting-started/dojo/egeria-dojo-day-1-3-1-1-platform-set-up-prerequisites.md
-                              - Configuring the Platform: getting-started/dojo/egeria-dojo-day-1-3-1-2-configuring-the-platform.md
-                              - Configuring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
-                        - Running Metadata Access Servers:
-                              - Overview: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
-                              - Starting Server: getting-started/dojo/egeria-dojo-day-1-3-2-1-starting-the-server.md
-                              - Calling Server API: getting-started/dojo/egeria-dojo-day-1-3-2-2-calling-server-api.md
-                              - Working with Archives: getting-started/dojo/egeria-dojo-day-1-3-2-3-working-with-archives.md
-                              - Second Server: getting-started/dojo/egeria-dojo-day-1-3-2-4-second-server.md
-                        - Running Metadata Ecosystems:
-                              - Overview: getting-started/dojo/egeria-dojo-day-1-3-3-running-metadata-ecosystems.md
-                              - Running User Interfaces: getting-started/dojo/egeria-dojo-day-1-3-3-1-running-ui.md
-                              - Running Governance Servers: getting-started/dojo/egeria-dojo-day-1-3-3-2-running-governance-servers.md
-                              - Running Kubernetes and Labs: getting-started/dojo/egeria-dojo-day-1-3-3-3-kubernetes-and-labs.md
-                  - Participating in the Community: getting-started/dojo/egeria-dojo-day-1-4-participating-in-the-community.md
-            - Day 2:
-                  - Open Source Philosophy: getting-started/dojo/egeria-dojo-day-2-1-open-source-philosophy.md
-                  - Tools for Contributors: getting-started/dojo/egeria-dojo-day-2-2-tools-for-contributors.md
-                  - Contributing to Egeria: getting-started/dojo/egeria-dojo-day-2-3-contribution-to-egeria.md
-                  - Type of Contribution: getting-started/dojo/egeria-dojo-day-2-4-types-of-contribution.md
-                  - Becoming a Contributor: getting-started/dojo/egeria-dojo-day-2-5-becoming-a-contributor.md
-            - Day 3:
-                  - Becoming an Advocate: getting-started/dojo/egeria-dojo-day-3-1-becoming-an-advocate.md
-                  - Becoming a Maintainer: getting-started/dojo/egeria-dojo-day-3-2-becoming-a-maintainer.md
-                  - Egeria Architecture: getting-started/dojo/egeria-dojo-day-3-3-egeria-architecture.md
-                  - Egeria Social: getting-started/dojo/egeria-dojo-day-3-4-egeria-social.md
   - Community:
       - Community Recognition: community/index.md
       - Community Guide: guides/community.md
@@ -342,7 +290,7 @@ nav:
               - Markdown: guides/contributor/markdown.md
   - Releases:
       - Overview: release-notes/overview.md
-      - Monthly News:
+      - Newsletters:
             - August 2023: release-notes/august-2023.md
             - April 2023: release-notes/april-2023.md
             - February 2023: release-notes/february-2023.md
