--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -555,8 +555,10 @@ nav:
                   - Open Metadata View Services: services/omvs/index.md
                   - My Profile: services/omvs/my-profile/overview.md
                   - Asset Catalog: services/omvs/asset-catalog/overview.md
+                  - Feedback Manager: services/omvs/feedback-manager/overview.md
                   - Collection Manager: services/omvs/collection-manager/overview.md
                   - Automated Curation: services/omvs/automated-curation/overview.md
+                  - Governance Author: services/omvs/governance-author/overview.md
                   - Notification Manager: services/omvs/notification-manager/overview.md
                   - Project Manager: services/omvs/project-manager/overview.md
                   - Glossary Author: services/omvs/glossary-author/overview.md
